# verdik

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  npm-release.yml  pypi-release.yml
py/: .gitignore  README.md  pyproject.toml
py/src/verdik/: __init__.py  core.py
py/tests/: test_verdik.py
ts/: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsup.config.ts  vitest.config.ts
