[project]
name = "verdik"
version = "0.0.0"
description = "Pure, decision-logged policy evaluation for MissionCtrl and agent-fabric authorization seams."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verdik"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "ty>=0.0.1a8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
extra-paths = ["src"]
