[project]
name = "verdik"
version = "0.0.0"
description = "Pure, decision-logged policy evaluation for MissionCtrl and agent-fabric authorization seams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/cachetronaut/verdik"
Repository = "https://github.com/cachetronaut/verdik"
Issues = "https://github.com/cachetronaut/verdik/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verdik"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "ty>=0.0.1a8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
extra-paths = ["src"]
